...
            app:itemRippleColor="#1F41BB"
            android:text="No"
            android:textColor="#1F41BB"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:itemRippleColor="#1F41BB"
            android:text="Yes"
            android:textColor="#FC0505"
...
